# LearnVulkan

./: .gitignore  CMakeLists.txt  compile.bat
resources/shaders/00/: triangle.frag
source/: CMakeLists.txt
source/include/: Application.hpp  VkGlfwWindow.hpp
source/include/Utils/: Common.hpp  fileUtils.hpp  log.hpp
source/src/: Main.cpp  VkGlfwWindow.cpp
source/src/utils/: log.cpp
